[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets - Fixed/Objects/Industrial/4 Animated objects/Entry.png" type="Texture" id=1]
[ext_resource path="res://DetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/PrototypeExamples/PrototypeDoor.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 15, 31 )

[sub_resource type="CircleShape2D" id=8]
radius = 37.0135

[node name="PrototypeDoor" type="Node2D"]
script = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="StaticBody2D"]
frames = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 7 )

[node name="DetectionZone" parent="StaticBody2D" instance=ExtResource( 2 )]
collision_layer = 1280
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/DetectionZone"]
shape = SubResource( 8 )

[connection signal="body_entered" from="StaticBody2D/DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="body_exited" from="StaticBody2D/DetectionZone" to="." method="_on_DetectionZone_body_exited"]
